crates/brief-hir/tests/snapshots/snapshots__ctor_implicit_assign.snap
---
source: crates/brief-hir/tests/snapshots.rs
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    ClassDecl
      name: Dog
      symbol: SymbolRef(0)
      methods:
