crates/brief-hir/tests/snapshots/snapshots__for_in_loop.snap
---
source: crates/brief-hir/tests/snapshots.rs
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: test
      symbol: SymbolRef(0)
      params:
      body:
        Block
          statements:
            Expr:
Error
    Error
    Error
    Error
    Error
    Error
    Error
