crates/brief-hir/tests/snapshots/snapshots__function_declaration.snap
---
source: crates/brief-hir/tests/snapshots.rs
assertion_line: 503
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: add
      symbol: SymbolRef(0)
      params:
        Param
          name: x
          symbol: SymbolRef(0)
          type: Int
        Param
          name: y
          symbol: SymbolRef(1)
          type: Int
      return_type: Int
      body:
        Block
          statements:
            Return
              value: BinaryOp(Add)
                  left: Variable(x, SymbolRef(0))
                  right: Variable(y, SymbolRef(1))
