crates/brief-hir/tests/snapshots/snapshots__match_multiple_patterns.snap
---
source: crates/brief-hir/tests/snapshots.rs
assertion_line: 489
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: test
      symbol: SymbolRef(0)
      params:
        Param
          name: x
          symbol: SymbolRef(0)
      body:
        Block
          statements:
            VarDecl
              name: __temp_0
              symbol: SymbolRef(0)
              initializer: Variable(x, SymbolRef(0))

            Expr:
Error
            Expr:
Error
            Expr:
Integer(1)
            Expr:
Error
            Expr:
Integer(2)
            Expr:
Error
            Expr:
Integer(3)
            Expr:
Error
            Return
              value: Interpolation
                  parts: 1 parts

    Error
    Error
    Error
    Error
    Error
