crates/brief-hir/tests/snapshots/snapshots__match_statement.snap
---
source: crates/brief-hir/tests/snapshots.rs
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: test
      symbol: SymbolRef(0)
      params:
        Param
          name: x
          symbol: SymbolRef(0)
      body:
        Block
          statements:
            Expr:
Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
