crates/brief-hir/tests/snapshots/snapshots__postfix_dec.snap
---
source: crates/brief-hir/tests/snapshots.rs
assertion_line: 468
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: test
      symbol: SymbolRef(0)
      params:
      body:
        Block
          statements:
            VarDecl
              name: x
              symbol: SymbolRef(0)
              initializer: Integer(10)

            Expr:
Assign
                target: Variable(x, SymbolRef(0))
                value: BinaryOp(Sub)
                    left: Variable(x, SymbolRef(0))
                    right: Integer(1)
