crates/brief-hir/tests/snapshots/snapshots__postfix_inc.snap
---
source: crates/brief-hir/tests/snapshots.rs
assertion_line: 461
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    FuncDecl
      name: test
      symbol: SymbolRef(0)
      params:
      body:
        Block
          statements:
            VarDecl
              name: x
              symbol: SymbolRef(0)
              initializer: Integer(1)

            Expr:
Assign
                target: Variable(x, SymbolRef(0))
                value: BinaryOp(Add)
                    left: Variable(x, SymbolRef(0))
                    right: Integer(1)
