crates/brief-hir/tests/snapshots/snapshots__variable_resolution.snap
---
source: crates/brief-hir/tests/snapshots.rs
assertion_line: 510
expression: pretty_print_hir(&hir)
---
HirProgram
  declarations:
    VarDecl
      name: x
      symbol: SymbolRef(0)
      initializer: Integer(1)
    VarDecl
      name: y
      symbol: SymbolRef(1)
      initializer: BinaryOp(Add)
          left: Variable(x, SymbolRef(0))
          right: Integer(2)
